<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr6.lab1ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/Apellido"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/apellido"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/sexo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checkedButton="@+id/Masculino"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/Masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino" />

                <RadioButton
                    android:id="@+id/Femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="Femenino" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/fecha_de_nacimiento" />

            <DatePicker
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />


            <AutoCompleteTextView
                android:id="@+id/pais"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/pais" />


            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/telefono"
                android:inputType="phone" />


            <EditText
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/direccion" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/input_hobbies"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/hobby" />


            <Spinner
                android:id="@+id/hobbies"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/favorito"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/favorito" />


        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/mostrar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/mostrar" />

            <TextView
                android:id="@+id/datos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/datos" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

